--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+bot_venv/
 
 # Spyder project settings
 .spyderproject
@@ -127,6 +128,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# VScode
+settings.json
 
 # Data
 /data
